force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>This custom object will be utilized in the JobQuest app to track job applications for the user seeking a job.</description>
    <label>Job Application</label>
    <nameField>
        <label>Job Application  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>