force-app/main/default/objects/Job_Application__c/fields/Average_Effective_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Effective_Tax_Rate__c</fullName>
    <inlineHelpText>This is a taxpayer&apos;s average tax rate for each income bracket.</inlineHelpText>
    <label>Average Effective Tax Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 to $11,000	              10%</fullName>
            </value>
            <value>
                <fullName>$11,000 to $44,725       11%</fullName>
            </value>
            <value>
                <fullName>$44,725 to $95,375       15%</fullName>
            </value>
            <value>
                <fullName>$95,375 to $182,100     19%</fullName>
            </value>
            <value>
                <fullName>$182,100 to $231,250   22%</fullName>
            </value>
            <value>
                <fullName>$231,250 to $578,125   28%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>