force-app/main/default/objects/Job_Application__c/fields/Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>Base_Salary__c</fullName>
    <description>Base Salary</description>
    <label>Base Salary</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>