force-app/main/default/objects/Job_Application__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A text or lookup field to store the name of the company or nonprofit where the job application is being sent.</description>
    <inlineHelpText>To which company or organization will this application be sent?</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>