force-app/main/default/objects/Job_Application__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>This is a text field for the name of the employer</description>
    <label>Employer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>