force-app/main/default/objects/Job_Application__c/fields/Estimated_Federal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Federal_Tax__c</fullName>
    <inlineHelpText>Using your salary range and Average Effective Tax Rate, this is a rough estimate of what you will pay in Federal Taxes.</inlineHelpText>
    <label>Estimated Federal Tax</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>