force-app/main/default/objects/Job_Application__c/fields/Estimated_Monthly_Paycheck__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Paycheck__c</fullName>
    <label>Estimated Monthly Paycheck</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>