force-app/main/default/objects/Job_Application__c/fields/Estimated_Weekly_Paycheck__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weekly_Paycheck__c</fullName>
    <description>take home salary if received pay weekly</description>
    <label>Estimated Weekly Paycheck</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>