force-app/main/default/objects/Job_Application__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Description: A long text area to hold detailed information about the job, such as responsibilities, qualifications, benefits, etc.</description>
    <inlineHelpText>This field is for the detailed job description.</inlineHelpText>
    <label>Job Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>