force-app/main/default/objects/Job_Application__c/fields/Job_Post_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Link__c</fullName>
    <description>A URL field to store the web link of the job posting.</description>
    <inlineHelpText>Please record web link to job posting.</inlineHelpText>
    <label>Job Post Link</label>
    <type>Url</type>
</CustomField>