force-app/main/default/objects/Job_Application__c/fields/Job_Rating__c.field-meta.xml
<CustomField>
    <fullName>Job_Rating__c</fullName>
    <description>Rating: A picklist o rate the attractiveness of the job on a predetermined scale.</description>
    <inlineHelpText>How would you rate this job opportunity?</inlineHelpText>
    <label>Job Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 - Excellent</fullName>
            </value>
            <value>
                <fullName>4 - Very Good</fullName>
            </value>
            <value>
                <fullName>3 - Good</fullName>
            </value>
            <value>
                <fullName>2 - Fair</fullName>
            </value>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>