force-app/main/default/objects/Job_Application__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>This is a text field for the job position or title to which the user is applying.</description>
    <inlineHelpText>Please record the job position or title here.</inlineHelpText>
    <label>Job Title</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>