force-app/main/default/objects/Job_Application__c/fields/Jobble_Id__c.field-meta.xml
<CustomField>
    <fullName>Jobble_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>When receiving Jooble jobs, we need an external Id to guard against duplicate job entries</inlineHelpText>
    <label>Jobble Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>