force-app/main/default/objects/Job_Application__c/fields/Jooble_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Last_Updated__c</fullName>
    <description>Jooble Last Updated as text</description>
    <label>Jooble Last Updated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>