force-app/main/default/objects/Job_Application__c/fields/Listing_Pay__c.field-meta.xml
<CustomField>
    <fullName>Listing_Pay__c</fullName>
    <description>string(text) salary directly from job listing, not yet standardized</description>
    <label>Listing Pay</label>
    <length>40</length>
    <type>Text</type>
</CustomField>