force-app/main/default/objects/Job_Application__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location: A text field to indicate the job location or if it&apos;s remote.</description>
    <inlineHelpText>Please indicate job location or if job is remote.</inlineHelpText>
    <label>Location</label>
    <length>60</length>
    <type>Text</type>
</CustomField>