force-app/main/default/objects/Job_Application__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes: A text field that can hold a lot of information.</description>
    <inlineHelpText>Please record additional information or any observations.</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>