force-app/main/default/objects/Job_Application__c/fields/Remote_Job__c.field-meta.xml
<CustomField>
    <fullName>Remote_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to see if posting specifically says job is purely remote.</description>
    <inlineHelpText>Does posting specifically say job is remote?</inlineHelpText>
    <label>Remote Job</label>
    <type>Checkbox</type>
</CustomField>