force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Salary: A numerical field to capture the expected salary for the job position.  No decimal places.</description>
    <inlineHelpText>Please record the expected salary.  If a range is given pick within the range.  If no salary information is given, record the typical salary for the job position in the given location.</inlineHelpText>
    <label>Salary</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>