force-app/main/default/objects/Job_Application__c/fields/Single_or_Married_filing_Jointly__c.field-meta.xml
<CustomField>
    <fullName>Single_or_Married_filing_Jointly__c</fullName>
    <label>Single or Married(filing Jointly)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filing Single</fullName>
            </value>
            <value>
                <fullName>Filing Married (jointly)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>