force-app/main/default/objects/Job_Application__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <description>estimate the yearly Social Security liability</description>
    <label>Annual Social Security</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>