force-app/main/default/objects/Job_Application__c/fields/Standard_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Standard_Deduction__c</fullName>
    <label>Standard Deduction</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>