force-app/main/default/objects/Job_Application__c/fields/Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay__c</fullName>
    <label>Take Home Pay (Yearly)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>