force-app/main/default/objects/Job_Application__c/fields/Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bracket__c</fullName>
    <description>2023 Tax Bracket for Single filer</description>
    <label>Tax Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%	  $0 - $11,000</fullName>
            </value>
            <value>
                <fullName>12%	  $11,001 - $44,725</fullName>
            </value>
            <value>
                <fullName>22%	  $44,726 - $95,375</fullName>
            </value>
            <value>
                <fullName>24%	  $95,376 - $182,100</fullName>
            </value>
            <value>
                <fullName>32%	  $182,101 - $231,250</fullName>
            </value>
            <value>
                <fullName>35%	  $231,251 - $578,125</fullName>
            </value>
            <value>
                <fullName>37%	  $578,126 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>