force-app/main/default/objects/Job_Application__c/fields/Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Income__c</fullName>
    <description>Taxable Income = Adjusted Gross Income - Standard Deduction</description>
    <inlineHelpText>Taxable Income is the Adjusted Gross Income(AGI) minus the Standard Deduction.</inlineHelpText>
    <label>Taxable Income</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>